--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "peerDependencies": {
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.3.12",
@@ -20,7 +21,8 @@
     "react-scripts": "4.0.3"
   },
   "resolutions": {
-    "babel-loader": "8.1.0"
+    "babel-loader": "8.1.0",
+    "styled-components": "^5"
   },
   "scripts": {
     "start": "react-scripts start",
