--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactable",
   "version": "0.1.0",
   "private": true,
-  "peerDependencies": {
+  "dependencies": {
     "react": "^17.0.2",
     "styled-components": "^5.3.3"
   },
