--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
-  "name": "reactable",
+  "name": "@codbear/reactable",
   "version": "0.1.0",
-  "private": true,
+  "author": "codbear (https://github.com/codbear)",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "license": "GPL-3.0",
+  "homepage": "https://github.com/monatheoctocat/my_package",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/codbear/reactable.git"
+  },
+  "bugs": {
+    "url": "https://github.com/codbear/reactable/issues"
+  },
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [ "dist", "README.md" ],
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -17,6 +30,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "babel-cli": "^6.26.0",
     "prettier": "^2.4.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3"
@@ -27,7 +41,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "yarn prettier:check && eslint --ext js,jsx",
