--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "gh-pages": "^3.2.3",
     "prettier": "^2.4.1",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "use-reducer-logger": "^1.0.2"
   },
   "resolutions": {
     "babel-loader": "8.1.0",
