--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "styled-components": "^5.3.3",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
@@ -43,8 +43,7 @@
     "faker": "^5.5.3",
     "gh-pages": "^3.2.3",
     "prettier": "^2.4.1",
-    "react-scripts": "4.0.3",
-    "use-reducer-logger": "^1.0.2"
+    "react-scripts": "5.0.0"
   },
   "resolutions": {
     "babel-loader": "8.1.0",
